# cf-wagdns

./: .env.example  .gitignore  Cargo.toml  README.md  cf-wagdns.code-workspace  cf-wagdns.config.example  cloudflare-ddns.config.example  cloudflare-ddns.excalidraw  cloudflare-ddns.sh  planning.md
src/: main.rs
