[package]
name = "cloudflare-ddns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
log = {version = "0.4", features = ["release_max_level_info"] }
envfile = "0.2"
serde_json = "1.0"
simplelog = "0.12"
serde = { version = "1.0", features = ["derive"] }